# stm32mp1_multicore_comm

./: LICENSE  README.md  yocto_steps.txt
meta-stm32mp/: README
meta-stm32mp/conf/: layer.conf
meta-stm32mp/recipes-apps/hello_world/: hello-world.bb
meta-stm32mp/recipes-apps/ht_client/: ht-client.bb
meta-stm32mp/recipes-apps/ht_server/: ht-server.bb
meta-stm32mp/recipes-apps/rpcomm/: rpcomm.bb
meta-stm32mp/recipes-apps/utilities/: utils.bb
meta-stm32mp/recipes-core/images/: core-image-st.bb
meta-stm32mp/recipes-kernel/hello_world/: kernel-hello-world.bb
meta-stm32mp/recipes-kernel/hello_world/files/: Makefile  hello_world.c
stm-apps/cm4/M4A7Comm/: CMakeLists.txt
stm-apps/cm4/M4A7Comm/drivers/: CMakeLists.txt
stm-apps/cm4/M4A7Comm/drivers/BSP/STM32MP15xx_DISCO/: stm32mp15xx_disco_stpmic1.c
stm-apps/cm4/M4A7Comm/drivers/CMSIS/Core_A/Source/: irq_ctrl_gic.c
stm-apps/cm4/M4A7Comm/drivers/CMSIS/Device/ST/STM32MP1xx/Include/: stm32mp157cxx_cm4.h  stm32mp1xx.h
stm-apps/cm4/M4A7Comm/drivers/STM32MP1xx_HAL_Driver/Src/: stm32mp1xx_hal_msp_template.c
stm-apps/cm4/M4A7Comm/inc/: FreeRTOSConfig.h  comm_types.h  main.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h
stm-apps/cm4/M4A7Comm/src/: main.c  openamp.c  stm32mp1xx_hal_msp.c  stm32mp1xx_it.c  syscalls.c  sysmem.c
stm-apps/cm4/M4A7Comm/sw4stm32/FreeRTOS/: stm32mp15xx_m4.ld
stm-apps/mp157/HtClient/: CMakeLists.txt  LICENSE
stm-apps/mp157/HtClient/src/: CMakeLists.txt  main.cpp
stm-apps/mp157/HtClient/src/comm/: comm_configs.hpp  ipc_read.hpp  ipc_reader.hpp  message_conversion.hpp
stm-apps/mp157/HtClient/src/core/: core_reader.hpp
stm-apps/mp157/HtClient/src/init/: init.hpp
stm-apps/mp157/HtServer/: CMakeLists.txt
stm-apps/mp157/HtServer/src/: CMakeLists.txt  main.cpp
stm-apps/mp157/HtServer/src/comm/: comm_configs.hpp  ipc_receiver.hpp  ipc_sender.hpp  ipc_sender_active.hpp  ipc_sender_interface.hpp  message_conversion.hpp
stm-apps/mp157/HtServer/src/core/: server_core.hpp  server_core_interface.hpp
stm-apps/mp157/HtServer/src/init/: init.hpp
stm-apps/mp157/RPComm/: CMakeLists.txt
stm-apps/mp157/RPComm/src/: CMakeLists.txt  main.cpp
stm-apps/mp157/Utilities/: CMakeLists.txt
stm-apps/mp157/Utilities/cmake/: UtilitiesConfig.cmake.in
stm-apps/mp157/Utilities/utilities/: CMakeLists.txt  utilities.rc  version.h.in
stm-apps/mp157/Utilities/utilities/pmr/: CMakeLists.txt
stm-apps/mp157/Utilities/utilities/pmr/inc/: monotonic_buffer_resource.hpp  pmr_headers.hpp  polymorphic_allocator.hpp
stm-apps/mp157/Utilities/utilities/pmr/src/: monotonic_buffer_resource.cpp  polymorphic_allocator.cpp
stm-apps/mp157/Utilities/utilities/semaphore/: CMakeLists.txt
stm-apps/mp157/Utilities/utilities/semaphore/inc/: semaphore.hpp  semaphore_interface.hpp
stm-apps/mp157/Utilities/utilities/semaphore/src/: semaphore_.cpp
stm-apps/mp157/Utilities/utilities/shared_memory/: CMakeLists.txt
stm-apps/mp157/Utilities/utilities/shared_memory/inc/: shared_memory.hpp  shared_memory_interface.hpp
stm-apps/mp157/Utilities/utilities/shared_memory/src/: shared_memory.cpp
stm-apps/mp157/Utilities/utilities/sysutils/inc/: reset_handler.hpp  signal_handler.hpp
stm-apps/mp157/Utilities/utilities/thread_pool/: CMakeLists.txt
stm-apps/mp157/Utilities/utilities/thread_pool/inc/: thread_pool.hpp  thread_pool_interface.hpp
stm-apps/mp157/Utilities/utilities/thread_pool/src/: thread_pool.cpp
stm-apps/mp157/hello_world/: .ninja_deps  .ninja_log  CMakeLists.txt
stm-apps/mp157/hello_world/src/: CMakeLists.txt  main.cpp
